# hackerrank-manager

./: .gitignore  hackerrank-manager.cabal  hrank.cabal
app/: Manager.hs
scripts/: create.py
src/: HRank.hs  HackerRank.hs
src/HRank/: Utilities.hs
src/HRank/Mathematics/Fundamentals/FindPoint/: Solution.hs  UnitTest.hs
src/HRank/Mathematics/Fundamentals/MinimumDraws/: Solution.hs  UnitTest.hs
src/HRank/Utilities/: Manager.hs  UnitTest.hs
src/HRank/Utilities/Manager/: Challenge.hs  Create.hs  DB.hs  Edit.hs  Execute.hs  Haskell.hs  IOError.hs  Main.hs  Manager.hs  Read.hs  Test.hs
src/HackerRank/: Utilities.hs
src/HackerRank/Utilities/: Manager.hs
src/HackerRank/Utilities/Manager/: Challenge.hs  Create.hs  DB.hs  Edit.hs  Execute.hs  Haskell.hs  IOError.hs  Manager.hs  Read.hs  Test.hs
