name:                hrank
version:             0.2.0.0
synopsis:            HackerRank solutions in Haskell
homepage:            https://github.com/oopsno/hrank
license-file:        LICENSE
author:              Oopsno
maintainer:          yufeiliu94@gmail.com
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  build-depends:       base  >= 4.8 && < 4.9,
                       ghc  >= 7.10, 
                       hxt  >= 9.3,
                       unix >= 2.7,
                       lens >= 4.13,
                       wreq >= 0.4,
                       text >= 1.2,
                       aeson >= 0.10,
                       fuzzy >= 0.1,
                       split >= 0.2,
                       hspec >= 2.2,
                       pandoc >= 1.16,
                       strict >= 0.3,
                       process >= 1.2,
                       filepath >= 1.4,
                       directory >= 1.2,
                       ghc-paths >= 0.1,
                       bytestring >= 0.10, 
                       lens-aeson >= 1.0.0.5,
                       regex-pcre >= 0.94,
                       QuickCheck >= 2.8,
                       pretty-show >= 1.6, 
                       HandsomeSoup >= 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     HRank,
                       HRank.Utilities,
                       HRank.Utilities.Manager,
                       HRank.Utilities.Manager.Challenge,
                       HRank.Utilities.Manager.Create,
                       HRank.Utilities.Manager.DB,
                       HRank.Utilities.Manager.Edit,
                       HRank.Utilities.Manager.Execute,
                       HRank.Utilities.Manager.Haskell,
                       HRank.Utilities.Manager.IOError,
                       HRank.Utilities.Manager.Manager,
                       HRank.Utilities.Manager.Read,
                       HRank.Utilities.Manager.Test

executable manager
  build-depends:       base,
                       hrank >= 0.2
  main-is: Manager.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:
    -dynamic
